--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=10" />
     <title>smart Energy Dashbord</title>
     <link rel="stylesheet" href="css/style.css" />
+    <script src="script.js"></script>
   </head>
   <body>
     <header>
