--- a/index.html
+++ b/index.html
@@ -9,21 +9,33 @@
   </head>
   <body>
     <header>
-      <h1>welkom bij het smart EnergyDashboard</h1>
-      <nav>
-        <a href="#">Home</a>
-        <a href="#">Dashboard</a>
-        <a href="#">Inloggen</a>
-      </nav>
+      <div class="container">
+        <h1>welkom bij het smart EnergyDashboard</h1>
+        <nav>
+          <a href="#">Home</a>
+          <a href="#">Dashboard</a>
+          <a href="#">Inloggen</a>
+        </nav>
+      </div>
     </header>
 
-    <main>
-      <section>
+    <main class="container">
+      <section class="intro">
         <h2>Overzicht</h2>
         <p>
           Bekijk uw energieverbruik, voorspellingen en waarschuingen in een
           overzicht.
         </p>
+      </section>
+      <section class="info-boxes">
+        <div class="box">
+          <h3>energieverbruik</h3>
+          <p>Bekijk live en historisch verbruik.</p>
+        </div>
+        <div class="box">
+          <h3>Instellingen</h3>
+          <p>pas je voorkeuren en meldingen aan.</p>
+        </div>
       </section>
     </main>
     <footer>
